# DNS-Tunneling_Detector-Environment

./: Dockerfile  LICENCE  README.md  dataset.csv  env.py  inference.py  main.py  model.py  openenv.yaml  pyproject.toml  task.py
server/: app.py
