[project]
name = "dns-tunneling-openenv"
version = "0.1.0"
description = "OpenEnv RL environment for DNS tunneling detection"
authors = [
  { name = "Shrikant Bandawala" }
]

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "pandas",
  "requests",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
